fixed input rounding on ios

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -83,6 +83,7 @@ button, input {
 	font-size: 1em;
 	text-transform: inherit;
 	border: none;
+	border-radius: 0;
 	outline: none;
 	background-color: transparent;
 }
